--- a/Wh6.html
+++ b/Wh6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+    <title>Bayartsetseg Bayarjargal - Resume</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,11 +18,21 @@
             padding: 30px;
             max-width: 800px;
             margin: auto;
+            position: relative;
+        }
+        .student-id {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            font-size: 14px;
+            color: #666;
+            font-weight: bold;
         }
         .header {
             display: flex;
             align-items: center;
             gap: 20px;
+            margin-top: 30px;
         }
         .header img {
             width: 140px;
@@ -58,18 +68,20 @@
             margin: 0;
             padding-left: 20px;
         }
+        li {
+            margin-bottom: 8px;
+        }
     </style>
 </head>
 <body>
     <div class="resume">
+        <div class="student-id">Student ID: 114035126</div>
+        
         <div class="header">
-            <!-- Your actual image path -->
-            <img src="C:\Users\Dell\Documents\w6\zyrag.jpg" alt="Profile Picture">
+            <img src="C:\Users\Dell\Documents\w6\zyrag.jpg" alt="Bayartsetseg Bayarjargal">
             <div>
-                <h1>Happy Bayartsetseg</h1>
-                <p>Email: happy@example.com</p>
-                <p>Phone: +886 912 345 678</p>
-                <p>Location: Taichung, Taiwan</p>
+                <h1>Bayartsetseg Bayarjargal</h1>
+                <p>Email: Bayrb1212@gmail.com</p>
             </div>
         </div>
 
@@ -77,43 +89,52 @@
 
         <section>
             <h2>Profile</h2>
-            <p>Motivated business and finance student with a strong interest in financial analysis, management, and global business trends. Known for creativity, teamwork, and leadership skills.</p>
+            <p>Motivated business and finance student with a strong interest in financial analysis, management, and global business trends. Currently pursuing a Bachelor's degree in Business Administration at Asian University, Taiwan. Known for creativity, teamwork, and leadership skills with experience in finance club activities and arts organization.</p>
         </section>
 
         <section>
             <h2>Education</h2>
             <ul>
-                <li><strong>Asian University, Taiwan</strong> — B.A. in Business Administration (2023–Present)</li>
-                <li><strong>Mongolian University of Finance and Economics</strong> — B.A. in Business (2021–2023)</li>
+                <li><strong>Asian University, Taiwan</strong> — Bachelor of Arts in Business Administration (2023–Present)
+                    <br>Student ID: 114035126
+                </li>
+                <li><strong>Mongolian University of Finance and Economics, Mongolia</strong> — Bachelor of Arts in Business (2021–2023)
+                    <br>Completed foundational courses in finance, economics, and business management
+                </li>
             </ul>
         </section>
 
         <section>
             <h2>Experience</h2>
             <ul>
-                <li><strong>Finance Club Member</strong> — Organized events and discussions about market analysis and investment strategies.</li>
-                <li><strong>Arts Club “Хэмнэл”</strong> — Helped plan performances and creative events.</li>
+                <li><strong>Finance Club Member</strong> — Asian University & MUFE
+                    <br>Organized and participated in events and discussions about market analysis, investment strategies, and financial planning. Collaborated with peers to analyze current market trends and present findings to club members.
+                </li>
+                <li><strong>Arts Club "Хэмнэл" Member</strong> — Mongolian University of Finance and Economics
+                    <br>Helped plan and execute cultural performances and creative events. Demonstrated leadership in coordinating team activities and managing event logistics.
+                </li>
             </ul>
         </section>
 
         <section>
             <h2>Skills</h2>
             <ul>
-                <li>Financial Analysis & Forecasting</li>
-                <li>Microsoft Excel & PowerPoint</li>
-                <li>Public Speaking & Teamwork</li>
-                <li>Creative Presentation Design</li>
+                <li><strong>Financial & Business:</strong> Financial Analysis, Forecasting, Market Research, Investment Strategy</li>
+                <li><strong>Technical:</strong> Microsoft Excel (Advanced), PowerPoint, Word, Basic Data Analysis</li>
+                <li><strong>Soft Skills:</strong> Public Speaking, Teamwork, Leadership, Creative Presentation Design, Event Planning</li>
+                <li><strong>Languages:</strong> Mongolian (Native), English (Intermediate - B2), Chinese (Basic)</li>
             </ul>
         </section>
 
         <section>
-            <h2>Languages</h2>
+            <h2>Interests & Activities</h2>
             <ul>
-                <li>Mongolian — Native</li>
-                <li>English — Intermediate (B2)</li>
-                <li>Chinese — Basic</li>
+                <li>Following global financial markets and economic trends</li>
+                <li>Participating in cultural and artistic events</li>
+                <li>Engaging in international business discussions and networking</li>
             </ul>
         </section>
     </div>
 </body>
 </html>
+
